Se repara menú de carrera para que vaya al inicio

--- a/web/templates/carrera/admision.html
+++ b/web/templates/carrera/admision.html
@@ -9,7 +9,7 @@
     <div class="shell section-34 section-md-top-110 section-md-bottom-41">
         <h1>Admisión</h1>
         <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
-            <li><a href="/">Inicio</a></li>
+            <li><a href="/">Carrera</a></li>
             <li>Admisión</li>
         </ul>
     </div>
