se arregla nombre en breadcumps

--- a/web/templates/carrera/detalle_academico.html
+++ b/web/templates/carrera/detalle_academico.html
@@ -11,8 +11,8 @@
     <div class="shell section-34 section-md-top-110 section-md-bottom-41">
         <h1>Docentes</h1>
         <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
-            <li><a href="/">Inicio</a></li>
-            <li>docentes</li>
+            <li><a href="/">Carrera</a></li>
+            <li>Docentes</li>
         </ul>
     </div>
 </section>
