--- a/web/templates/carrera/lista_docentes.html
+++ b/web/templates/carrera/lista_docentes.html
@@ -12,7 +12,7 @@
         <h1>Docentes</h1>
         <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
             <li><a href="/">Inicio</a></li>
-            <li>docentes</li>
+            <li>Docentes</li>
         </ul>
     </div>
 </section>
