--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -38,7 +38,7 @@
                                     <li><a href="/carrera/admision"><span class="text-middle">Admisión</span></a></li>
                                     <li><a href="/carrera/organigrama"><span class="text-middle">Organigrama</span></a></li>
                                     <li><a href="/carrera/objetivos"><span class="text-middle">Misión - Visión</span></a></li>
-                                    <li><a href="/carrera/docentes"><span class="text-middle">Académicos</span></a></li>
+                                    <li><a href="/carrera/docentes"><span class="text-middle">Docentes</span></a></li>
                                     <li><a href="/carrera/plan"><span class="text-middle">Plan Estudios</span></a></li>
                                     <li><a href="/carrera/perfile"><span class="text-middle">Perfil Egresado</span></a></li>
                                     <li><a href="/carrera/perfilp"><span class="text-middle">Perfil Profesional</span></a></li>
