--- a/web/templates/carrera/lista_docentes.html
+++ b/web/templates/carrera/lista_docentes.html
@@ -11,7 +11,7 @@
     <div class="shell section-34 section-md-top-110 section-md-bottom-41">
         <h1>Docentes</h1>
         <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
-            <li><a href="/">Inicio</a></li>
+            <li><a href="/">Carrera</a></li>
             <li>Docentes</li>
         </ul>
     </div>
