--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -58,6 +58,7 @@
                                     <li><a href="/clinica/faq"><span class="text-middle">Preguntas Frecuentes</span></a></li>
                                 </ul>
                             </li>
+                            <li class="{% active_menu '/vinculación' %}"><a href="#"><span>Vinculación</span></a></li>
                             <li class="{% active_menu '^(/carrera/)(co)([a-z]+)' %}"><a href="/carrera/contacto"><span>Contacto</span></a></li>
                         </ul>
                     </div>
