Se sube la versión de incorporación de videos al index en la página de odontología.

--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -4,7 +4,25 @@
 {% block title %}Odontología{% endblock %} 
 
 {% block content %}
-<!--What makes us different-->
+<!--What makes us different-->    
+<section class="section-98 section-sm-110">
+    <div class="shell">
+        <h3>Multimedia</h3>
+        <hr class="divider divider-lg bg-primary">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-5">
+                <iframe width="100%" height="300px" src="https://www.youtube.com/embed/iQeiUi-U2eM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <br>
+            </div>
+            <div class="col-md-5">
+                <iframe width="100%" height="300px" src="https://www.youtube.com/embed/-yQmV3nQRsQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="col-md-1"></div>
+        </div>
+        
+    </div>
+</section>
 <section class="section-98 section-sm-110">
     <div class="shell">
         <h3>Novedades</h3>
