Se suben logos de prueba para vinculación

--- a/web/templates/carrera/vinculacion.html
+++ b/web/templates/carrera/vinculacion.html
@@ -7,10 +7,10 @@
 <!-- Modern Breadcrumbs-->
 <section class="breadcrumb-modern context-dark text-md-left">
     <div class="shell section-34 section-md-top-110 section-md-bottom-41">
-        <h1>Vinculación</h1>
+        <h1>Vinculación con el Medio</h1>
         <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
             <li><a href="/">Carrera</a></li>
-            <li>Vinculación</li>
+            <li>Vinculación con el medio</li>
         </ul>
     </div>
 </section>
@@ -19,12 +19,22 @@
   <!-- Our Customers-->
   <section class="section-98 section-sm-110">
     <div class="shell">
-      <h3>Vinculación</h3>
+      <h3>Vinculación con el Medio</h3>
       <hr class="divider divider-lg bg-java">
       <div class="offset-top-66">
         <div class="owl-carousel-middle">
           <!-- owl carousel-->
-          <div data-loop="false" data-items="1" data-xs-items="2" data-dots="true" data-mouse-drag="false" data-md-items="5" data-nav="false" class="owl-carousel owl-carousel-default owl-carousel-class-light owl-carousel-middle"><a href="#"><img src="images/clients/partner-01-150x79.png" width="150" height="79" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a><a href="#"><img src="images/clients/partner-02-150x135.png" width="150" height="135" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a><a href="#"><img src="images/clients/partner-03-150x111.png" width="150" height="111" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a><a href="#"><img src="images/clients/partner-04-150x149.png" width="150" height="149" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a><a href="#"><img src="images/clients/partner-05-150x117.png" width="150" height="117" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a><a href="#"><img src="images/clients/partner-01-150x79.png" width="150" height="79" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a><a href="#"><img src="images/clients/partner-03-150x111.png" width="150" height="111" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a><a href="#"><img src="images/clients/partner-04-150x149.png" width="150" height="149" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a><a href="#"><img src="images/clients/partner-03-150x111.png" width="150" height="111" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a><a href="#"><img src="images/clients/partner-04-150x149.png" width="150" height="149" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
+          <div data-loop="false" data-items="1" data-xs-items="2" data-dots="true" data-mouse-drag="false" data-md-items="5" data-nav="false" class="owl-carousel owl-carousel-default owl-carousel-class-light owl-carousel-middle">
+            <a href="#"><img src="{% static 'images/logos/logo-muni-laserena.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
+            <a href="#"><img src="{% static 'images/logos/muni-coquimbo.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
+            <a href="#"><img src="{% static 'images/logos/logo-muni-laserena.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
+            <a href="#"><img src="{% static 'images/logos/muni-coquimbo.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
+            <a href="#"><img src="{% static 'images/logos/logo-muni-laserena.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
+            <a href="#"><img src="{% static 'images/logos/muni-coquimbo.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
+            <a href="#"><img src="{% static 'images/logos/logo-muni-laserena.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
+            <a href="#"><img src="{% static 'images/logos/muni-coquimbo.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
+            <a href="#"><img src="{% static 'images/logos/logo-muni-laserena.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
+            <a href="#"><img src="{% static 'images/logos/muni-coquimbo.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
           </div>
         </div>
       </div>
@@ -44,7 +54,7 @@
                   <q>The costs of treatments are very reasonable at Chiropractic and I have always been impressed with the results. The fully qualified team at the clinic are professional and friendly.</q>
                 </p>
                 <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                  <div class="unit-left unit-item-narrow"><img width="60" height="60" src="images/users/user-betty-wade-60x60.jpg" alt="" class="img-circle quote-img"/></div>
+                  <div class="unit-left unit-item-narrow"><img width="60" height="60" src="{% static 'images/users/user-betty-wade-60x60.jpg' %}" alt="" class="img-circle quote-img"/></div>
                   <div class="unit-body unit-item-wide">
                     <h5 class="quote-author text-capitalize text-bold">
                       <cite class="text-normal">Betty Wade</cite>
@@ -62,7 +72,7 @@
                   <q>Dr. Snyder is a wonderful Doctor, who makes you feel important and who takes time to listen, which most doctors don’t do. Loved him from the first visit! Very professional assistance.</q>
                 </p>
                 <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                  <div class="unit-left unit-item-narrow"><img width="60" height="60" src="images/users/user-bryan-green-60x60.jpg" alt="" class="img-circle quote-img"/></div>
+                  <div class="unit-left unit-item-narrow"><img width="60" height="60" src="{% static 'images/users/user-bryan-green-60x60.jpg' %}" alt="" class="img-circle quote-img"/></div>
                   <div class="unit-body unit-item-wide">
                     <h5 class="quote-author text-capitalize text-bold">
                       <cite class="text-normal">Bryan Green</cite>
@@ -80,7 +90,7 @@
                   <q>The costs of treatments are very reasonable at Chiropractic and I have always been impressed with the results. The fully qualified team at the clinic are professional and friendly.</q>
                 </p>
                 <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                  <div class="unit-left unit-item-narrow"><img width="60" height="60" src="images/users/user-betty-wade-60x60.jpg" alt="" class="img-circle quote-img"/></div>
+                  <div class="unit-left unit-item-narrow"><img width="60" height="60" src="{% static 'images/users/user-betty-wade-60x60.jpg' %}" alt="" class="img-circle quote-img"/></div>
                   <div class="unit-body unit-item-wide">
                     <h5 class="quote-author text-capitalize text-bold">
                       <cite class="text-normal">Betty Wade</cite>
@@ -98,7 +108,7 @@
                   <q>Dr. Snyder is a wonderful Doctor, who makes you feel important and who takes time to listen, which most doctors don’t do. Loved him from the first visit! Very professional assistance.</q>
                 </p>
                 <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                  <div class="unit-left unit-item-narrow"><img width="60" height="60" src="images/users/user-bryan-green-60x60.jpg" alt="" class="img-circle quote-img"/></div>
+                  <div class="unit-left unit-item-narrow"><img width="60" height="60" src="{% static 'images/users/user-bryan-green-60x60.jpg' %}" alt="" class="img-circle quote-img"/></div>
                   <div class="unit-body unit-item-wide">
                     <h5 class="quote-author text-capitalize text-bold">
                       <cite class="text-normal">Bryan Green</cite>
