Se define un modelo y vista basica para documentos

--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -59,6 +59,7 @@
                                 </ul>
                             </li>
                             <li class="{% active_menu '/vinculacion' %}"><a href="/carrera/vinculacion"><span>Vinculación</span></a></li>
+                            <li class="{% active_menu '/documentos' %}"><a href="/documentos"><span>Documentos</span></a></li>
                             <li class="{% active_menu '^(/carrera/)(co)([a-z]+)' %}"><a href="/carrera/contacto"><span>Contacto</span></a></li>
                         </ul>
                     </div>
