Se mejora la visualizacion de documentos y el modelo

--- a/web/templates/documentos/docs.html
+++ b/web/templates/documentos/docs.html
@@ -35,8 +35,9 @@
                             {% endifequal %}
 
                             <div class="unit-body">
-                              <p> <a href="{{ documento.archivo.url }}" target="_blank">{{ documento.titulo }}</a><br>
-                              </p>
+                              <h4><a href="{{ documento.archivo.url }}" target="_blank">{{ documento.titulo }}</a><br>
+                              </h4>
+                              <p>{{ documento.descripcion }}</p>
                             </div>
                           </div>
                           {% endfor %}
