Se realizan los cambios al index de los videos, se cambia la navegación y se agrega cambio a la vista de vinculacion.

--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -4,25 +4,74 @@
 {% block title %}Odontología{% endblock %} 
 
 {% block content %}
-<!--What makes us different-->    
+<!--What makes us different-->   
+<div class="row"> 
+    <section class="section-98 section-sm-110">
+        <div class="shell">
+            <h3>Multimedia</h3>
+            <hr class="divider divider-lg bg-primary">
+            <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md-5">
+                    <iframe width="100%" height="300px" src="https://www.youtube.com/embed/iQeiUi-U2eM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <br>
+                    <p class="h4 text-gray-dark text">"Descripción del video 1"</p>
+                </div>
+                <div class="col-md-5">
+                    <iframe width="100%" height="300px" src="https://www.youtube.com/embed/-yQmV3nQRsQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <br>
+                    <p class="h4 text-gray-dark text">"Descripción del video 2"</p>
+                </div>
+                <div class="col-md-1"></div>
+            </div>
+        </div>
+    </section>
+</div>
+<!--What makes us different-->   
+<!--div class="row"> 
 <section class="section-98 section-sm-110">
     <div class="shell">
         <h3>Multimedia</h3>
         <hr class="divider divider-lg bg-primary">
-        <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-5">
+        <div id="myCarousel" class="carousel slide col-md-6 col-md-offset-3" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#myCarousel" data-slide-to="1"></li>
+              <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="item active">
                 <iframe width="100%" height="300px" src="https://www.youtube.com/embed/iQeiUi-U2eM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <br>
-            </div>
-            <div class="col-md-5">
+                <div class="carousel-caption">
+                </div>
+                <p>#ULSTeCuida: Recomendaciones odontológicas en tiempos de COVID-19</p>
+              </div>
+              <div class="item">
                 <iframe width="100%" height="300px" src="https://www.youtube.com/embed/-yQmV3nQRsQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="carousel-caption">
+                </div>
+                <p>Primera generación de egresados de Odontología</p>
+              </div>          
+              <div class="item">
+                <iframe width="100%" height="300px" src="https://www.youtube.com/embed/oSrjf0lTXFU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="carousel-caption">
+                </div>
+                <p>Inaugurada la Clínica Odontológica Asistencial Docente ULS</p>
+              </div>
             </div>
-            <div class="col-md-1"></div>
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left"></span>
+              <span class="sr-only">Anterior</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right"></span>
+              <span class="sr-only">Siguiente</span>
+            </a>
         </div>
-        
     </div>
 </section>
+</div-->
+<div class="row">
 <section class="section-98 section-sm-110">
     <div class="shell">
         <h3>Novedades</h3>
@@ -50,6 +99,7 @@
         </div>
     </div>
 </section>
+</div>   
 <script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
