--- a/web/templates/carrera/vinculacion.html
+++ b/web/templates/carrera/vinculacion.html
@@ -7,7 +7,7 @@
 <!-- Modern Breadcrumbs-->
 <section class="breadcrumb-modern context-dark text-md-left">
     <div class="shell section-34 section-md-top-110 section-md-bottom-41">
-        <h1>Vinculación con el Medio</h1>
+        <h1>Vinculación con el Medio y extensión</h1>
         <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
             <li><a href="/">Carrera</a></li>
             <li>Vinculación con el medio</li>
