--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -65,7 +65,7 @@
                                     <li><a href="#"><span class="text-middle">Actividades</span></a></li>
                                 </ul>
                             </li>
-                            <li class="{% active_menu '/investigacion' %}"><a href="#"><span>Investigación</span></a></li>
+                            <li class="{% active_menu '^(/investigacion)' %}"><a href="/investigacion"><span>Investigación</span></a></li>
                             <li class="{% active_menu '^(/carrera/)(co)([a-z]+)' %}"><a href="/carrera/contacto"><span>Contacto</span></a></li>
                         </ul>
                     </div>
