Se da espacio a las actividades

--- a/web/static/css/custom.css
+++ b/web/static/css/custom.css
@@ -257,4 +257,10 @@ div#instagram_section div.img-overlay i.fa-instagram {
     }
 }
 
+/* Actividad */
+
+article.post.post-modern.post-modern-classic.post-modern-classic-full {
+  margin-bottom: 40px;
+}
+
 
