Cambios de prueba de odonto se creo el tipo de documento y las apps de vinculacion e investigacion.

--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -60,12 +60,12 @@
                             </li>
                             <li class="{% active_menu '/vinculacion' %}"><a href="#"><span>Vinculación con el medio</span></a>
                                 <ul class="rd-navbar-dropdown">
-                                    <li><a href="#"><span class="text-middle">Políticas</span></a></li>
-                                    <li><a href="#"><span class="text-middle">Noticias</span></a></li>
-                                    <li><a href="#"><span class="text-middle">Actividades</span></a></li>
+                                    <li><a href="/vinculacion/politicas"><span class="text-middle">Políticas</span></a></li>
+                                    <li><a href="/vinculacion/noticias"><span class="text-middle">Noticias</span></a></li>
+                                    <li><a href="/vinculacion/actividades"><span class="text-middle">Actividades</span></a></li>
                                 </ul>
                             </li>
-                            <li class="{% active_menu '/investigacion' %}"><a href="#"><span>Investigación</span></a></li>
+                            <li class="{% active_menu '/investigacion' %}"><a href="/investigacion"><span>Investigación</span></a></li>
                             <li class="{% active_menu '/documentos' %}"><a href="/documentos"><span>Documentos</span></a></li>
                             <li class="{% active_menu '^(/carrera/)(co)([a-z]+)' %}"><a href="/carrera/contacto"><span>Contacto</span></a></li>
                         </ul>
