--- a/web/templates/investigacion/index.html
+++ b/web/templates/investigacion/index.html
@@ -1,190 +1,53 @@
-{% extends "carrera/basecontenido.html" %}
-{% load staticfiles %}
-
-{% block title %}Investigación{% endblock %}
-
-{% block content %}
+{% extends "carrera/basecontenido.html" %} 
+{% load staticfiles %} 
+{% block title %}Odontología{% endblock %} 
+{% block content %} 
 <!-- Modern Breadcrumbs-->
 <section class="breadcrumb-modern context-dark text-md-left">
     <div class="shell section-34 section-md-top-110 section-md-bottom-41">
         <h1>Investigación</h1>
         <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
-            <li><a href="/">Odontología</a></li>
-            <li>Investigación</li>
+            <li><a href="/">Investigación</a></li>
         </ul>
     </div>
 </section>
 <!-- Page Content-->
 <main class="page-content">
-  <!-- Our Customers-->
-  <section class="section-98 section-sm-110">
-    <div class="shell">
-      <h3>Investigación</h3>
-      <hr class="divider divider-lg bg-java">
-      <div class="offset-top-66">
-        <div class="owl-carousel-middle">
-          <!-- owl carousel-->
-          <div data-loop="false" data-items="1" data-xs-items="2" data-dots="true" data-mouse-drag="false" data-md-items="5" data-nav="false" class="owl-carousel owl-carousel-default owl-carousel-class-light owl-carousel-middle">
-            <a href="#"><img src="{% static 'images/logos/logo-muni-laserena.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
-            <a href="#"><img src="{% static 'images/logos/muni-coquimbo.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
-            <a href="#"><img src="{% static 'images/logos/logo-muni-laserena.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
-            <a href="#"><img src="{% static 'images/logos/muni-coquimbo.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
-            <a href="#"><img src="{% static 'images/logos/logo-muni-laserena.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
-            <a href="#"><img src="{% static 'images/logos/muni-coquimbo.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
-            <a href="#"><img src="{% static 'images/logos/logo-muni-laserena.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
-            <a href="#"><img src="{% static 'images/logos/muni-coquimbo.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
-            <a href="#"><img src="{% static 'images/logos/logo-muni-laserena.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
-            <a href="#"><img src="{% static 'images/logos/muni-coquimbo.jpg' %}" width="150" height="150" alt="" class="img-responsive reveal-inline-block img-semi-transparent"/></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- testimonials-->
-  <section class="section-98 section-sm-110 bg-white-liac">
-    <div class="shell">
-      <h3>Testimonios</h3>
-      <hr class="divider divider-lg bg-java">
-      <div class="offset-top-66">
-        <div data-loop="false" data-items="1" data-dots="true" data-mouse-drag="false" data-md-items="2" data-nav="false" class="owl-carousel owl-carousel-default owl-carousel-class-light">
-          <div class="owl-item">
-            <blockquote class="quote quote-classic">
-              <div class="quote-body">
-                <p class="h4 text-italic text-gray-dark">
-                  <q>The costs of treatments are very reasonable at Chiropractic and I have always been impressed with the results. The fully qualified team at the clinic are professional and friendly.</q>
-                </p>
-                <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                  <div class="unit-left unit-item-narrow"><img width="60" height="60" src="{% static 'images/users/user-betty-wade-60x60.jpg' %}" alt="" class="img-circle quote-img"/></div>
-                  <div class="unit-body unit-item-wide">
-                    <h5 class="quote-author text-capitalize text-bold">
-                      <cite class="text-normal">Betty Wade</cite>
-                    </h5>
-                    <p class="quote-desc text-capitalize text-gray text-italic">Patient</p>
-                  </div>
+    <section class="section-98 section-sm-50 section-lg-bottom-0">
+        <div class="shell text-left">
+            <div class="range range-xs-center">
+                <div class="cell-sm-12 cell-lg-12">
+                    <h3>Lista de documentos</h3>
+                    <hr class="divider divider-lg bg-java hr-left-0 hr-sm-left-2">
+                    <div class="offset-top-41 offset-lg-top-66">
+                        {% if documentos %}
+                          {% for documento in documentos %}
+                          <div class="unit unit-horizontal unit-middle">
+                            {%  ifequal documento.extension '.pdf' %}
+                              <div class="unit-left"><span class="icon fa-file-pdf-o" style="color:#ce0e2d;"></span></div>
+                            {% endifequal %}
+                            {%  ifequal documento.extension '.docx' %}
+                              <div class="unit-left"><span class="icon fa-file-word-o" style="color:#071551;"></span></div>
+                            {% endifequal %}
+                            {%  ifequal documento.extension '.xlsx' %}
+                              <div class="unit-left"><span class="icon fa-file-excel-o" style="color:green;"></span></div>
+                            {% endifequal %}
+
+                            <div class="unit-body">
+                              <h4><a href="{{ documento.archivo.url }}" target="_blank">{{ documento.titulo }}</a><br>
+                              </h4>
+                              <p>{{ documento.descripcion }}</p>
+                            </div>
+                          </div>
+                          {% endfor %}
+                        {% else %}
+                          Actualmente no existen documentos.
+                        {% endif %}
+                    </div>
                 </div>
-              </div>
-            </blockquote>
-          </div>
-          <div class="owl-item">
-            <blockquote class="quote quote-classic">
-              <div class="quote-body">
-                <p class="h4 text-italic text-gray-dark">
-                  <q>Dr. Snyder is a wonderful Doctor, who makes you feel important and who takes time to listen, which most doctors don’t do. Loved him from the first visit! Very professional assistance.</q>
-                </p>
-                <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                  <div class="unit-left unit-item-narrow"><img width="60" height="60" src="{% static 'images/users/user-bryan-green-60x60.jpg' %}" alt="" class="img-circle quote-img"/></div>
-                  <div class="unit-body unit-item-wide">
-                    <h5 class="quote-author text-capitalize text-bold">
-                      <cite class="text-normal">Bryan Green</cite>
-                    </h5>
-                    <p class="quote-desc text-capitalize text-gray text-italic">Patient</p>
-                  </div>
-                </div>
-              </div>
-            </blockquote>
-          </div>
-          <div class="owl-item">
-            <blockquote class="quote quote-classic">
-              <div class="quote-body">
-                <p class="h4 text-italic text-gray-dark">
-                  <q>The costs of treatments are very reasonable at Chiropractic and I have always been impressed with the results. The fully qualified team at the clinic are professional and friendly.</q>
-                </p>
-                <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                  <div class="unit-left unit-item-narrow"><img width="60" height="60" src="{% static 'images/users/user-betty-wade-60x60.jpg' %}" alt="" class="img-circle quote-img"/></div>
-                  <div class="unit-body unit-item-wide">
-                    <h5 class="quote-author text-capitalize text-bold">
-                      <cite class="text-normal">Betty Wade</cite>
-                    </h5>
-                    <p class="quote-desc text-capitalize text-gray text-italic">Patient</p>
-                  </div>
-                </div>
-              </div>
-            </blockquote>
-          </div>
-          <div class="owl-item">
-            <blockquote class="quote quote-classic">
-              <div class="quote-body">
-                <p class="h4 text-italic text-gray-dark">
-                  <q>Dr. Snyder is a wonderful Doctor, who makes you feel important and who takes time to listen, which most doctors don’t do. Loved him from the first visit! Very professional assistance.</q>
-                </p>
-                <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                  <div class="unit-left unit-item-narrow"><img width="60" height="60" src="{% static 'images/users/user-bryan-green-60x60.jpg' %}" alt="" class="img-circle quote-img"/></div>
-                  <div class="unit-body unit-item-wide">
-                    <h5 class="quote-author text-capitalize text-bold">
-                      <cite class="text-normal">Bryan Green</cite>
-                    </h5>
-                    <p class="quote-desc text-capitalize text-gray text-italic">Patient</p>
-                  </div>
-                </div>
-              </div>
-            </blockquote>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- 3 columns testimonials-->
-  <!-- <section class="section-98 section-sm-110">
-    <div class="shell">
-      <h3>3 columns testimonials</h3>
-      <hr class="divider divider-lg bg-java">
-      <div class="range offset-top-66">
-        <div class="cell-md-4">
-          <blockquote class="quote quote-classic quote-classic-top">
-            <div class="quote-body">
-              <p class="h4 text-italic text-gray-dark">
-                <q>The costs of treatments are very reasonable at Chiropractic and I have always been impressed with the results. The fully qualified team at the clinic are professional and friendly.</q>
-              </p>
-              <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                <div class="unit-left unit-item-narrow"><img width="60" height="60" src="images/users/user-betty-wade-60x60.jpg" alt="" class="img-circle quote-img"/></div>
-                <div class="unit-body unit-item-wide">
-                  <h5 class="quote-author text-capitalize text-bold text-primary">
-                    <cite class="text-normal">Betty Wade</cite>
-                  </h5>
-                  <p class="quote-desc text-capitalize text-gray text-italic">Patient</p>
-                </div>
-              </div>
             </div>
-          </blockquote>
         </div>
-        <div class="cell-md-4 offset-top-66 offset-md-top-0">
-          <blockquote class="quote quote-classic quote-classic-top">
-            <div class="quote-body">
-              <p class="h4 text-italic text-gray-dark">
-                <q>Dr. Snyder is a wonderful Doctor, who makes you feel important and who takes time to listen, which most doctors don’t do. Loved him from the first visit! Very professional assistance.</q>
-              </p>
-              <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                <div class="unit-left unit-item-narrow"><img width="60" height="60" src="images/users/user-bryan-green-60x60.jpg" alt="" class="img-circle quote-img"/></div>
-                <div class="unit-body unit-item-wide">
-                  <h5 class="quote-author text-capitalize text-bold text-primary">
-                    <cite class="text-normal">Bryan Green</cite>
-                  </h5>
-                  <p class="quote-desc text-capitalize text-gray text-italic">Patient</p>
-                </div>
-              </div>
-            </div>
-          </blockquote>
-        </div>
-        <div class="cell-md-4 offset-top-66 offset-md-top-0">
-          <blockquote class="quote quote-classic quote-classic-top">
-            <div class="quote-body">
-              <p class="h4 text-italic text-gray-dark">
-                <q>Wonderful people here! They listen to you, and are genuinely concerned about providing you the best care possible! I would recommend them to everyone!</q>
-              </p>
-              <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                <div class="unit-left unit-item-narrow"><img width="60" height="60" src="images/users/user-brittany-douglas-60x60.jpg" alt="" class="img-circle quote-img"/></div>
-                <div class="unit-body unit-item-wide">
-                  <h5 class="quote-author text-capitalize text-bold text-primary">
-                    <cite class="text-normal">Brittany Douglas</cite>
-                  </h5>
-                  <p class="quote-desc text-capitalize text-gray text-italic">Patient</p>
-                </div>
-              </div>
-            </div>
-          </blockquote>
-        </div>
-      </div>
-    </div>
-  </section> -->
+    </section>
 </main>
 {% endblock %}
+
