Se cambia actividad por noticia

--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -61,8 +61,8 @@
                             <li class="{% active_menu '/vinculacion' %}"><a href="#"><span>Vinculación con el medio</span></a>
                                 <ul class="rd-navbar-dropdown">
                                     <li><a href="/vinculacion/politicas"><span class="text-middle">Políticas</span></a></li>
-                                    <li><a href="/vinculacion/noticias"><span class="text-middle">Noticias</span></a></li>
-                                    <li><a href="/actividad"><span class="text-middle">Actividades</span></a></li>
+                                    <li><a href="{% url 'noticias' %}"><span class="text-middle">Noticias</span></a></li>
+                                    <li><a href="/vinculacion/actividad"><span class="text-middle">Actividades</span></a></li>
                                 </ul>
                             </li>
                             <li class="{% active_menu '/investigacion' %}"><a href="/investigacion"><span>Investigación</span></a></li>
