--- a/web/templates/noticia/noticia.html
+++ b/web/templates/noticia/noticia.html
@@ -5,11 +5,11 @@
 <!-- Modern Breadcrumbs-->
 <section class="breadcrumb-modern context-dark text-md-left">
     <div class="shell section-34 section-md-top-110 section-md-bottom-41">
-        <h1>Actividad</h1>
+        <h1>Noticia</h1>
         <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
             <li><a href="/">Carrera</a></li>
-            <li><a href="{% url 'actividades' %}">Actividades</a></li>
-            <li>Actividad</li>
+            <li><a href="{% url 'noticias' %}">Noticias</a></li>
+            <li>Noticia</li>
         </ul>
     </div>
 </section>
@@ -21,15 +21,15 @@
                 <div class="cell-md-10 cell-lg-8">
                   <div class="range">
                     <div class="cell-sm-12">
-                      <h4 class="text-bold text-primary">{{ actividad.titulo }}</h4>
+                      <h4 class="text-bold text-primary">{{ noticia.titulo }}</h4>
                       <ul class="list list-inline list-inline-dashed offset-top-4">
-                        <li>{{ actividad.inicio|date:"d M Y, H:i" }} hrs</li>
-                        <li>{{ actividad.cierre|date:"d M Y, H:i" }} hrs</li>
+                        <li>{{ noticia.inicio|date:"d M Y, H:i" }} hrs</li>
+                        <li>{{ noticia.cierre|date:"d M Y, H:i" }} hrs</li>
                       </ul>
-                      <div class="offset-top-30"><img src="{{ actividad.imagen.url }}" width="770" height="480" alt="" class="img-responsive center-block"></div>
+                      <div class="offset-top-30"><img src="{{ noticia.imagen.url }}" width="770" height="480" alt="" class="img-responsive center-block"></div>
                       <div class="offset-top-30">
                         {% autoescape off %}
-                            {{ actividad.descripcion }}
+                            {{ noticia.descripcion }}
                         {% endautoescape %}
                       </div>
                     </div>
