--- a/web/templates/noticia/noticias.html
+++ b/web/templates/noticia/noticias.html
@@ -5,10 +5,10 @@
 <!-- Modern Breadcrumbs-->
 <section class="breadcrumb-modern context-dark text-md-left">
     <div class="shell section-34 section-md-top-110 section-md-bottom-41">
-        <h1>Actividades</h1>
+        <h1>Noticias</h1>
         <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
             <li><a href="/">Carrera</a></li>
-            <li>Actividades</li>
+            <li>Noticias</li>
         </ul>
     </div>
 </section>
@@ -19,30 +19,30 @@
             <div class="range range-xs-center">
                 <div class="cell-md-10 cell-lg-8">
                   <div class="range">
-                    {% if actividades %}
-                      {% for actividad in actividades %}
+                    {% if noticias %}
+                      {% for noticia in noticias %}
                         <div class="cell-sm-6">
                           <article class="post post-modern post-modern-classic post-modern-classic-full">
                             <!-- Post media-->
                             <header class="post-media">
-                              <a href="{% url 'detalle' actid=actividad.id %}">
-                                <img width="770" height="480" src="{{ actividad.imagen.url }}" alt="" class="img-responsive img-cover"/>
+                              <a href="{% url 'detalle' actid=noticia.id %}">
+                                <img width="770" height="480" src="{{ noticia.imagen.url }}" alt="" class="img-responsive img-cover"/>
                               </a>
                             </header>
                             <!-- Post content-->
                             <section class="post-content text-left">
                               <!-- Post Title-->
                               <div class="post-title offset-top-8">
-                                <h4 class="text-bold"><a href="{% url 'detalle' actid=actividad.id %}">{{ actividad.titulo }}</a></h4>
+                                <h4 class="text-bold"><a href="{% url 'detalle' actid=noticia.id %}">{{ noticia.titulo }}</a></h4>
                               </div>
                               <ul class="list-inline list-inline-dashed">
-                                <li>{{ actividad.inicio|date:"d M Y, H:i" }} hrs</li>
-                                <li>{{ actividad.cierre|date:"d M Y, H:i" }} hrs</li>
+                                <li>{{ noticia.inicio|date:"d M Y, H:i" }} hrs</li>
+                                <li>{{ noticia.cierre|date:"d M Y, H:i" }} hrs</li>
                               </ul>
                               <!-- Post Body-->
                               <div class="post-body">
                                 {% autoescape off %}
-                                    {{ actividad.descripcion|truncatechars:200 }}
+                                    {{ noticia.descripcion|truncatechars:200 }}
                                 {% endautoescape %}
                               </div>
                               <!--
@@ -59,23 +59,23 @@
                           <nav>
                             <ul class="pagination-classic">
                               <li>
-                                {% if actividades.has_previous %}
-                                  <a href="?page={{ actividades.previous_page_number }}" class="btn btn-java">
+                                {% if noticias.has_previous %}
+                                  <a href="?page={{ noticias.previous_page_number }}" class="btn btn-java">
                                 {% else %}
                                   <a href="#" class="btn btn-java disabled">
                                 {% endif %}
                                 <span class="fa-chevron-left" aria-hidden="true"></span></a>
                               </li>
-                              {% for a in actividades.paginator.page_range %}
-                                {% if actividades.number == a %}
+                              {% for a in noticias.paginator.page_range %}
+                                {% if noticias.number == a %}
                                   <li class="active"><span class="btn btn-java">{{ a }}</span></li>
                                 {% else %}
                                   <li><a href="?page={{ a }}" class="btn btn-java">{{ a }}</a></li>
                                 {% endif %}
                               {% endfor %}
                               <li>
-                                {% if actividades.has_next %} 
-                                  <a href="?page={{ actividades.next_page_number }}" class="btn btn-java">
+                                {% if noticias.has_next %} 
+                                  <a href="?page={{ noticias.next_page_number }}" class="btn btn-java">
                                 {% else %}
                                   <a href="#" class="btn btn-java disabled">
                                 {% endif %}
@@ -88,7 +88,7 @@
                     {% else %}
                       <div class="cell-sm-12">
                         <div class="offset-top-30 offset-md-top-60">
-                          <h6 style="text-align:left">Actualmente no existen actividades o la busqueda que esta realizando no tiene resultados.</h6>
+                          <h6 style="text-align:left">Actualmente no existen noticias o la busqueda que esta realizando no tiene resultados.</h6>
                         </div>
                       </div>
                     {% endif %}
@@ -98,11 +98,11 @@
                    <div class="blog-grid-sidebar inset-lg-left-30">
                       <!-- Search in Blog-->
                       <div>
-                        <h6>Filtro de actividades</h6>
+                        <h6>Filtro de noticias</h6>
                         <hr class="text-subline">
                         <div class="offset-top-14 offset-md-top-20 rd-search-blog">
                           <!-- RD Search Form-->
-                          <form action="{% url 'actividades' %}" method="GET" class="form-search rd-search">
+                          <form action="{% url 'noticias' %}" method="GET" class="form-search rd-search">
                             <div class="form-group">
                               <label for="blog-classic-form-search-widget" class="form-label form-search-label">Buscar</label>
                               <input id="blog-classic-form-search-widget" type="text" name="query" autocomplete="off" class="form-search-input form-control null">
@@ -113,7 +113,7 @@
                       </div>
                       <!-- Archive-->
                       <div class="offset-top-30 offset-md-top-60">
-                        <h6>Actividades archivadas</h6>
+                        <h6>Noticias archivadas</h6>
                         <hr class="text-subline">
                       </div>
                       <div class="offset-top-14 offset-md-top-20">
@@ -124,7 +124,7 @@
                               <ul class="list list-marked inset-left-0 list-marked-icon text-dark list-marked-gray">
                                 {% for fecha in fechas %}
                                   {% if not forloop.counter|divisibleby:2 %}
-                                    <li><a href="{% url 'actividades' %}?mes={{fecha|date:'n'}}&anio={{fecha|date:'Y'}}">{{ fecha|date:"M Y" }}</a></li>
+                                    <li><a href="{% url 'noticias' %}?mes={{fecha|date:'n'}}&anio={{fecha|date:'Y'}}">{{ fecha|date:"M Y" }}</a></li>
                                   {% endif %}
                                 {% endfor %}
                               </ul>
@@ -135,7 +135,7 @@
                               <ul class="list list-marked inset-left-0 list-marked-icon text-dark list-marked-gray">
                                 {% for fecha in fechas %}
                                   {% if forloop.counter|divisibleby:2 %}
-                                    <li><a href="{% url 'actividades' %}?mes={{fecha|date:'n'}}&anio={{fecha|date:'Y'}}">{{ fecha|date:"M Y" }}</a></li>
+                                    <li><a href="{% url 'noticias' %}?mes={{fecha|date:'n'}}&anio={{fecha|date:'Y'}}">{{ fecha|date:"M Y" }}</a></li>
                                   {% endif %}
                                 {% endfor %}
                               </ul>
