--- a/web/templates/noticia/noticia.html
+++ b/web/templates/noticia/noticia.html
@@ -37,30 +37,51 @@
                 </div>
                 <div class="cell-sm-10 cell-md-8 cell-lg-4 offset-top-66 offset-md-top-90 offset-lg-top-0">
                    <div class="blog-grid-sidebar inset-lg-left-30">
+                      <!-- Search in Blog-->
+                      <div>
+                        <h6>Filtro de noticias</h6>
+                        <hr class="text-subline">
+                        <div class="offset-top-14 offset-md-top-20 rd-search-blog">
+                          <!-- RD Search Form-->
+                          <form action="{% url 'noticias' %}" method="GET" class="form-search rd-search">
+                            <div class="form-group">
+                              <label for="blog-classic-form-search-widget" class="form-label form-search-label">Buscar</label>
+                              <input id="blog-classic-form-search-widget" type="text" name="query" autocomplete="off" class="form-search-input form-control null">
+                            </div>
+                            <button type="submit" class="form-search-submit"><span class="fa fa-search"></span></button>
+                          </form>
+                        </div>
+                      </div>
                       <!-- Archive-->
                       <div class="offset-top-30 offset-md-top-60">
-                        <h6>Archive</h6>
+                        <h6>Noticias archivadas</h6>
                         <hr class="text-subline">
                       </div>
                       <div class="offset-top-14 offset-md-top-20">
                         <div class="range range-xs-center range-lg-left">
-                          <div class="cell-xs-6 cell-lg-5">
-                            <!-- List Marked-->
-                            <ul class="list list-marked inset-left-0 list-marked-icon text-dark list-marked-gray">
-                              <li><a href="#">Jan 2016</a></li>
-                              <li><a href="#">Mar 2016</a></li>
-                              <li><a href="#">May 2016</a></li>
-                              <li><a href="#">Jul 2016</a></li>
-                            </ul>
-                          </div>
-                          <div class="cell-xs-6 cell-lg-5 offset-top-10 offset-xs-top-0 inset-xs-left-5">
-                            <!-- List Marked-->
-                            <ul class="list list-marked inset-left-0 list-marked-icon text-dark list-marked-gray">
-                              <li><a href="#">Feb 2016</a></li>
-                              <li><a href="#">Apr 2016</a></li>
-                              <li><a href="#">Jun 2016</a></li>
-                            </ul>
-                          </div>
+                          {% if fechas %}
+                            <div class="cell-xs-6 cell-lg-5">
+                              <!-- List Marked Left -->
+                              <ul class="list list-marked inset-left-0 list-marked-icon text-dark list-marked-gray">
+                                {% for fecha in fechas %}
+                                  {% if not forloop.counter|divisibleby:2 %}
+                                    <li><a href="{% url 'noticias' %}?mes={{fecha|date:'n'}}&anio={{fecha|date:'Y'}}">{{ fecha|date:"M Y" }}</a></li>
+                                  {% endif %}
+                                {% endfor %}
+                              </ul>
+                              
+                            </div>
+                            <div class="cell-xs-6 cell-lg-5 offset-top-10 offset-xs-top-0 inset-xs-left-5">
+                              <!-- List Marked Right-->
+                              <ul class="list list-marked inset-left-0 list-marked-icon text-dark list-marked-gray">
+                                {% for fecha in fechas %}
+                                  {% if forloop.counter|divisibleby:2 %}
+                                    <li><a href="{% url 'noticias' %}?mes={{fecha|date:'n'}}&anio={{fecha|date:'Y'}}">{{ fecha|date:"M Y" }}</a></li>
+                                  {% endif %}
+                                {% endfor %}
+                              </ul>
+                            </div>
+                          {% endif %}
                         </div>
                     </div>
                    </div>
