Se agrega nuevo organigrama a la carrera y también se linkea la pagina de organigrama con la pagina de carrera/docentes.

--- a/web/templates/carrera/contenido.html
+++ b/web/templates/carrera/contenido.html
@@ -48,7 +48,9 @@
                 <!-- Our team-->
                 <section class="section-sm-50">
                     <div class="shell">
-                        {% autoescape off %}{{ contenido.texto }}{% endautoescape %}
+                        <a href="/carrera/docentes">
+                            {% autoescape off %}{{ contenido.texto }}{% endautoescape %}
+                        </a>
                     </div>
                 </section>
             </main>
