Se actualizan actividades

--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -62,7 +62,7 @@
                                 <ul class="rd-navbar-dropdown">
                                     <li><a href="/vinculacion/politicas"><span class="text-middle">Políticas</span></a></li>
                                     <li><a href="/vinculacion/noticias"><span class="text-middle">Noticias</span></a></li>
-                                    <li><a href="/actividad"><span class="text-middle">Actividades</span></a></li>
+                                    <li><a href="/vinculacion/actividades"><span class="text-middle">Actividades</span></a></li>
                                 </ul>
                             </li>
                             <li class="{% active_menu '/investigacion' %}"><a href="/investigacion"><span>Investigación</span></a></li>
