--- a/web/templates/investigacion/cienciometria.html
+++ b/web/templates/investigacion/cienciometria.html
@@ -18,9 +18,9 @@
         <div class="shell text-left">
             <div class="range range-xs-center">
                 <div class="cell-sm-12 cell-lg-12">
-                    <h3 class="text-center">Actividades o publicaciones de investigación</h3>
+                    <h3>Actividades o publicaciones de investigación</h3>
                     <hr class="divider divider-lg bg-primary">
-                    <div class="row col-md-10 col-md-offset-1">
+                    <div class="row col-md-10 col-md-offset-1 text-center">
                         <table class="table table-bordered table-hover text-center">
                             <tr>
                                 <th class="text-center">Año</th>
