--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -68,7 +68,7 @@
                             <li class="{% active_menu '/investigacion' %}"><a href="#"><span>Investigación</span></a>
                                 <ul class="rd-navbar-dropdown">
                                     <li><a href="/investigacion/documentos"><span class="text-middle">Políticas y Criterios</span></a></li>
-                                    <li><a href="/investigacion/cienciometria"><span class="text-middle">Cenciometría</span></a></li>
+                                    <li><a href="/investigacion/cienciometria"><span class="text-middle">Cienciometría</span></a></li>
                                 </ul></li>
                             <li class="{% active_menu '/documentos' %}"><a href="/documentos"><span>Documentos</span></a></li>
                             <li class="{% active_menu '^(/carrera/)(co)([a-z]+)' %}"><a href="/carrera/contacto"><span>Contacto</span></a></li>
