--- a/web/templates/404_.html
+++ b/web/templates/404_.html
@@ -1,4 +1,3 @@
-{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en" class="wide wow-animation smoothscroll scrollTo">
 
@@ -12,10 +11,10 @@
     <meta name="keywords" content="odontologia, uls, la serena, clinica, online">
     <meta name="description" content="Odontologia Universidad de La Serena">
     <meta name="date" content="Dec 26">
-    <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Oswald%7CLato:400italic,400,700">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
     <!--[if lt IE 10]>
         <div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
         <script src="js/html5shiv.min.js"></script>
@@ -30,7 +29,7 @@
             <div class="one-page">
                 <div class="one-page-header">
                     <!--Navbar Brand-->
-                    <div class="rd-navbar-brand"><a href="index.html"><img width="330" height="auto" class="img-responsive" src="{% static 'static/images/logo-uls-odonto-dark.svg' %}" alt="logo"/></a></div>
+                    <div class="rd-navbar-brand"><a href="index.html"><img width='330' height='auto' class='img-responsive' src='../static/images/logo-uls-odonto-dark.svg' alt='logo'/></a></div>
                 </div>
                 <!-- 404-->
                 <section>
@@ -54,8 +53,8 @@
         </main>
     </div>
     <!-- Java script-->
-    <script type="text/javascript" src="{% static 'js/core.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
+    <script type="text/javascript" src="../static/js/core.min.js"></script>
+    <script type="text/javascript" src="../static/js/script.js"></script>
 </body>
 
 </html>
