Se agrega boton de canal de youtube

--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -23,6 +23,9 @@
                       <span class="fa-quote-left"></span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa quas velit nesciunt tempore qui rerum deserunt vitae. Ad sed numquam tempore, velit, quaerat consequatur veniam! Eaque expedita maiores quisquam, vero rem molestiae optio ex harum, odit. At quod autem maxime?<span class="fa-quote-right"></span>
                     </p>
                 </div>
+                <div class="col-md-12" style="margin-top:20px;">
+                    <center><a href="#" class="btn btn-ellipse btn-java">mas videos</a></center>
+                </div>
             </div>
         </div>
     </section>
